# SnesEmulator

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json  working_dir_diff.sh
SnesEmulatorDotNet/: SnesEmulatorDotNet.sln
SnesEmulatorDotNet/Common/: IInstruction.cs  IState.cs
SnesEmulatorDotNet/SnesEmulator/: Program.cs  SnesEmulator.csproj
SnesEmulatorDotNet/WDC65816/: AddressMode.cs  IOperator.cs  MemoryAccess.cs
src/CodeGenerator/: CpuAddressModeImplementations.h  CpuGeneration.cpp  Main.cpp  SpcAddressModeImplementations.h  SpcGeneration.cpp  cpuInstructions.txt  cpuOpcodeTable.txt  cycleTable.txt  flagTable.txt  instructions.txt  modeTable.txt  sizeTable.txt  spcInstructions.txt  syntaxTable.txt
src/Common/: Memory.h  Output.h  Profiler.cpp  RegisterManager.h  System.cpp  Util.h
src/OpenALFramework/: CWaves.cpp  CWaves.h  Framework.cpp  LoadOAL.cpp  LoadOAL.h  aldlist.cpp  aldlist.h
src/SPC700/: SpcAddressMode.h  SpcInstructionDecoder.cpp  SpcOpcode.h  SpcOperator.h  SpcState.h
src/SnesEmulator/: AddressMode.h  AudioProcessor.cpp  AudioProcessor.h  AudioRegisters.h  AudioRenderer.cpp  AudioRenderer.h  AudioSystem.cpp  AudioSystem.h  AudioTest.h  BackgroundModes.h  Debugger.h  DmaInstruction.h  Emulator.cpp  Emulator.h  Exception.h  HdmaInstruction.h  IState.h  Instruction.cpp  Instruction.h  InstructionImplementations.cpp  InstructionImplementations.h  InstructionMap.cpp  InstructionMap.h  Main.cpp  Opcode.cpp  Opcode.h  OpcodeMap.cpp  OpcodeMap.h  Operator.cpp  Operator.h  Registers.h  Renderer.cpp  Renderer.h  Rom.h  Shader.cpp  Shader.h  SnesEmulator.cpp  SnesEmulator.h  SnesRenderer.cpp  SnesRenderer.h  (+14 more)
src/WDC65816/: CpuAddressMode.h  CpuInstructionDecoder.cpp  CpuInstructionDecoder.h  CpuOpcode.h  CpuOperator.h  CpuState.h
tools/CodeGenerator/: CpuAddressModeImplementations.h  CpuGeneration.cpp  SpcAddressModeImplementations.h  SpcGeneration.cpp  (+2 more)
(+32 files in other folders)
